nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{name}-nextcloud"
  labels:
    app: "{name}-nextcloud"
spec:
  ports:
    - port: 80
  selector:
    app: "{name}-nextcloud"
