nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "{name}-nextcloud-ingress"
spec:
  rules:
    - host: "{domain}"
      http:
        paths:
          - backend:
              serviceName: "{name}-nextcloud"
              servicePort: 80
